# cookiecutter-django

./: .pre-commit-config.yaml  cookiecutter.json  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/: .env  README.md  docker-compose.override.yml  docker-compose.yaml  example.env  pyproject.toml
{{cookiecutter.project_slug}}/api/: urls.py
{{cookiecutter.project_slug}}/api/v1/: urls.py
{{cookiecutter.project_slug}}/api/v1/users/: serializers.py  views.py
{{cookiecutter.project_slug}}/core/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/core/apps/users/: apps.py  managers.py  models.py
{{cookiecutter.project_slug}}/core/config/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/core/settings/: __init__.py
{{cookiecutter.project_slug}}/core/settings/components/: common.py  logging.py
{{cookiecutter.project_slug}}/core/settings/enviroments/: development.py
{{cookiecutter.project_slug}}/core/settings/environments/: development.py
{{cookiecutter.project_slug}}/core/templates/txt/: humans.txt
{{cookiecutter.project_slug}}/docker/django/: Dockerfile  ci.sh  gunicorn_config.py  run.sh
