[tool.poetry]
name = "cookiecutter_django"
version = "0.1.0"
description = ""
authors = ["Дороватовский Евгений <eanegin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
