[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.10"

Django = "^4.1.1"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-split-settings = "^1.2.0"
django-health-check = "^3.16"

psycopg2-binary = "^2.9"
gunicorn = "^20.0"
python-decouple = "^3.6"
structlog = "^22.1"


[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.6"
django-querycount = "^0.7"
django-migration-linter = "^4.1"
django-extra-checks = "^0.12"
django-coverage-plugin = "^2.0"
nplusone = "^1.0"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
flake8-django = "^1.1"
flake8-logging-format = "^0.7"
nitpick = "^0.32"
doc8 = "^1.0"

pytest = "^7.1"
pytest-django = "^4.5"
pytest-cov = "^3.0"
pytest-randomly = "^3.12"
pytest-deadfixtures = "^2.2"
pytest-timeout = "^2.1"
django-test-migrations = "^1.2"
hypothesis = "^6.54"

mypy = "^0.971"
django-stubs = "^1.12"

yamllint = "^1.27"
safety = "^2.1"
dotenv-linter = "^0.4"
polint = "^0.4"
dennis = "^1.1"
dump-env = "^1.3"
ipython = "^8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
